# SOC-threat-detection-platform

./: CHANGELOG.md  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: requirements-ci.txt
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: alerts.py  events.py  hunting.py  jobs.py  metrics.py  platform.py
backend/app/services/: detection_service.py  elasticsearch_service.py  mitre_enrichment.py
backend/tests/: test_additional_coverage.py  test_extended_coverage.py  test_ingest_cli.py  test_services_unit.py
data/: README.md  brute_force_scenario.json  sample_auth_logs.json  sample_endpoint_logs.json  sample_network_logs.json
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  MITRE_MAPPING.md  api.md  change-log.md  elasticsearch-setup.md  resume-bullets.md
docs/preview/: index.html
docs/screenshots/: README.md
frontend/src/: App.jsx
frontend/src/components/: HuntingQueryBuilder.tsx  Layout.jsx  StatusBadge.jsx
frontend/src/pages/: AlertDetailPage.jsx  DashboardPage.jsx  HuntingPage.jsx
frontend/src/services/: api.js
scripts/: generate_synthetic_logs.py  ingest_logs.py
